--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,6 @@
 body {
   font-family: 'Zen Kaku Gothic New', Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
+  background-color: black;
+  color: white;
 }
